--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -87,5 +87,40 @@
   "confirmReset": "نعم، إعادة تعيين الكل",
   "prayers": "صلوات",
   "footerSubtitle": "تابع وأكمل صلواتك الفائتة بوضوح وطمأنينة.",
-  "perDay":"يوميًا"
+  "perDay":"يوميًا",
+  "logout": "تسجيل الخروج",
+  "logoutTitle": "تأكيد تسجيل الخروج",
+  "logoutWarning": "هل أنت متأكد أنك تريد تسجيل الخروج من الحساب؟",
+  "loggedOut": "تم تسجيل الخروج بنجاح",
+  "confirm": "تأكيد",
+  "signInSubtitle": "مرحباً بعودتك! يرجى تسجيل الدخول للمتابعة.",
+  "emailLabel": "البريد الإلكتروني",
+  "passwordLabel": "كلمة المرور",
+  "signIn": "تسجيل الدخول",
+  "or": "أو",
+  "forgotPassword": "هل نسيت كلمة المرور؟",
+  "noAccount": "ليس لديك حساب؟",
+  "signUp": "إنشاء حساب",
+  "signUpSubtitle": "أنشئ حسابك لبدء تتبع صلواتك.",
+  "firstName": "الاسم الأول",
+  "lastName": "اسم العائلة",
+  "phoneNumber": "رقم الهاتف",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "fillAllFields": "يرجى ملء جميع الحقول",
+  "passwordsDoNotMatch": "كلمتا المرور غير متطابقتين",
+  "accountCreated": "تم إنشاء الحساب بنجاح!",
+  "somethingWentWrong": "حدث خطأ ما",
+  "emailInUse": "هذا البريد الإلكتروني مستخدم بالفعل.",
+  "weakPassword": "يجب أن تتكون كلمة المرور من 6 أحرف على الأقل.",
+  "alreadyHaveAccount": "هل لديك حساب بالفعل؟",
+  "invalidCredentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة.",
+  "invalidEmail": "تنسيق البريد الإلكتروني غير صالح.",
+  "accountDisabled": "تم تعطيل هذا الحساب.",
+  "loginFailed": "فشل تسجيل الدخول. يرجى المحاولة مرة أخرى.",
+  "resetPasswordTitle": "إعادة تعيين كلمة المرور",
+  "enterEmailWarning": "يرجى إدخال بريدك الإلكتروني.",
+  "resetEmailSent": "تم إرسال رسالة لإعادة تعيين كلمة المرور إلى بريدك الإلكتروني.",
+  "resetFailed": "فشل في إرسال رسالة إعادة التعيين. حاول مرة أخرى.",
+  "emailNotFound": "لم يتم العثور على حساب بهذا البريد الإلكتروني.",
+  "send": "إرسال"
 }
