--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -88,5 +88,40 @@
   "confirmReset": "Yes, Reset Everything",
   "prayers": "prayers",
   "footerSubtitle": "Track and complete your missed prayers with clarity and peace.",
-  "perDay":"per day"
+  "perDay":"per day",
+  "logout": "Log Out",
+  "logoutTitle": "Log Out",
+  "logoutWarning": "Are you sure you want to log out?",
+  "loggedOut": "Logged out successfully",
+  "confirm": "Confirm",
+  "signInSubtitle": "Welcome back! Please log in to continue.",
+  "emailLabel": "Email",
+  "passwordLabel": "Password",
+  "signIn": "Sign In",
+  "or": "or",
+  "forgotPassword": "Forgot Password?",
+  "noAccount": "Don’t have an account?",
+  "signUp": "Sign Up",
+  "signUpSubtitle": "Create your account to start tracking your prayers.",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "phoneNumber": "Phone Number",
+  "confirmPassword": "Confirm Password",
+  "fillAllFields": "Please fill all fields",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "accountCreated": "Account created successfully!",
+  "somethingWentWrong": "Something went wrong",
+  "emailInUse": "This email is already in use.",
+  "weakPassword": "Password should be at least 6 characters.",
+  "alreadyHaveAccount": "Already have an account?",
+  "invalidCredentials": "Invalid email or password.",
+  "invalidEmail": "Invalid email format.",
+  "accountDisabled": "This account has been disabled.",
+  "loginFailed": "Login failed. Please try again.",
+  "resetPasswordTitle": "Reset Password",
+  "enterEmailWarning": "Please enter your email address.",
+  "resetEmailSent": "A password reset email has been sent.",
+  "resetFailed": "Failed to send reset email. Please try again.",
+  "emailNotFound": "No account found with this email.",
+  "send": "Send"
 }
