--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -122,5 +122,10 @@
   "resetEmailSent": "تم إرسال رسالة لإعادة تعيين كلمة المرور إلى بريدك الإلكتروني.",
   "resetFailed": "فشل في إرسال رسالة إعادة التعيين. حاول مرة أخرى.",
   "emailNotFound": "لم يتم العثور على حساب بهذا البريد الإلكتروني.",
-  "send": "إرسال"
+  "send": "إرسال",
+  "googleSignInFailed": "فشل تسجيل الدخول بجوجل",
+  "appleSignInFailed": "فشل تسجيل الدخول بآبل",
+  "google": "جوجل",
+  "apple": "آبل",
+  "continueAsGuest": "المتابعة كضيف"
 }
