Updated localization file

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -127,5 +127,9 @@
   "appleSignInFailed": "فشل تسجيل الدخول بآبل",
   "google": "جوجل",
   "apple": "آبل",
-  "continueAsGuest": "المتابعة كضيف"
+  "continueAsGuest": "المتابعة كضيف",
+  "editMissedPrayers": "تعديل الصلوات الفائتة",
+  "editLogs": "تعديل الصلوات المنجزة",
+  "saveChanges": "حفظ التغييرات"
+
 }
