Updated localization file

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -130,6 +130,6 @@
   "continueAsGuest": "المتابعة كضيف",
   "editMissedPrayers": "تعديل الصلوات الفائتة",
   "editLogs": "تعديل الصلوات المنجزة",
-  "saveChanges": "حفظ التغييرات"
-
+  "saveChanges": "حفظ التغييرات",
+  "finish": "تنتهي"
 }
