--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -131,6 +131,6 @@
   "continueAsGuest": "Continue as Guest",
   "editMissedPrayers": "Edit Missed Prayers",
   "editLogs": "Edit Logged Prayers",
-  "saveChanges": "Save Changes"
-
+  "saveChanges": "Save Changes",
+  "finish": "Finish"
 }
