--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -131,5 +131,9 @@
   "editMissedPrayers": "تعديل الصلوات الفائتة",
   "editLogs": "تعديل الصلوات المنجزة",
   "saveChanges": "حفظ التغييرات",
-  "finish": "تنتهي"
+  "finish": "تنتهي",
+  "youCannotExceed": "لا يمكنك تجاوز عدد الصلوات الفائتة",
+  "missedPrayersFor": "الصلوات الفائتة لـ",
+  "youAlreadyLoggedAll": "لقد قمت بتسجيل جميع صلوات {prayer} الفائتة ✅",
+  "youAlreadyLoggedAllDescription": "تظهر عندما يُسجل المستخدم كل الصلوات الفائتة"
 }
