updated design for sign in and sign up

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -98,9 +98,14 @@
   "passwordLabel": "كلمة المرور",
   "signIn": "تسجيل الدخول",
   "or": "أو",
+  "orContinueWith": "أو تابع باستخدام",
+  "signInWelcome": "مرحبًا بك في متتبع صلوات القضاء 👋",
+  "signInTagline": "تتبع صلواتك الفائتة بسهولة.",
   "forgotPassword": "هل نسيت كلمة المرور؟",
   "noAccount": "ليس لديك حساب؟",
   "signUp": "إنشاء حساب",
+  "signUpWelcome": "أنشئ حسابك في متتبع صلوات القضاء ✨",
+  "signUpTagline": "نظّم صلواتك الفائتة بخطة تناسبك.",
   "signUpSubtitle": "أنشئ حسابك لبدء تتبع صلواتك.",
   "firstName": "الاسم الأول",
   "lastName": "اسم العائلة",
