--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -99,9 +99,14 @@
   "passwordLabel": "Password",
   "signIn": "Sign In",
   "or": "or",
+  "orContinueWith": "Or continue with",
+  "signInWelcome": "Welcome to Qadaa Tracker 👋",
+  "signInTagline": "Track your missed prayers effortlessly.",
   "forgotPassword": "Forgot Password?",
   "noAccount": "Don’t have an account?",
   "signUp": "Sign Up",
+  "signUpWelcome": "Create your Qadaa Tracker account ✨",
+  "signUpTagline": "Stay on top of your missed prayers with a personalized plan.",
   "signUpSubtitle": "Create your account to start tracking your prayers.",
   "firstName": "First Name",
   "lastName": "Last Name",
