--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -104,7 +104,7 @@
   "forgotPassword": "هل نسيت كلمة المرور؟",
   "noAccount": "ليس لديك حساب؟",
   "signUp": "إنشاء حساب",
-  "signUpWelcome": "أنشئ حسابك في متتبع صلوات القضاء ✨",
+  "signUpWelcome": "أنشئ حسابك في متتبع صLcut القضاء ✨",
   "signUpTagline": "نظّم صلواتك الفائتة بخطة تناسبك.",
   "signUpSubtitle": "أنشئ حسابك لبدء تتبع صلواتك.",
   "firstName": "الاسم الأول",
@@ -138,6 +138,7 @@
   "editLogs": "تعديل الصلوات المنجزة",
   "saveChanges": "حفظ التغييرات",
   "finish": "تنتهي",
+  "finished": "انتهت",
   "youCannotExceed": "لا يمكنك تجاوز عدد الصلوات الفائتة",
   "missedPrayersFor": "الصلوات الفائتة لـ",
   "youAlreadyLoggedAll": "لقد قمت بتسجيل جميع صلوات {prayer} الفائتة ✅",
