Update app display name to 'Itmam' (English) and 'إتمام' (Arabic)
- Updated localization files (app_en.arb, app_ar.arb) with new app title
- Added localized string resources for Android (values/strings.xml, values-ar/strings.xml)
- Updated AndroidManifest.xml to use localized app name
- Added InfoPlist.strings for iOS localization (en.lproj, ar.lproj)
- Updated iOS Info.plist and Xcode project configuration
- Updated web manifest and HTML title
- Updated macOS app name configuration

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "متتبع صلوات القضاء",
+  "appTitle": "إتمام",
 
   "qadaaTracker": "متتبع صلوات القضاء",
   "qadaaDescription": "تتبع وأكمل صلواتك الفائتة بوضوح وطمأنينة.",
