--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "Qadaa Tracker",
+  "appTitle": "Itmam",
 
   "qadaaTracker": "Qadaa Tracker",
   "qadaaDescription": "Track and complete your missed prayers with clarity and peace.",
