updated the UI with new colors, added sign in with apple logic

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,7 +1,7 @@
 {
   "appTitle": "إتمام",
+  "appVersion": "الإصدار 1.0",
 
-  "qadaaTracker": "متتبع صلوات القضاء",
   "qadaaDescription": "تتبع وأكمل صلواتك الفائتة بوضوح وطمأنينة.",
   "createMyPlan": "أنشئ خطتي",
   "timePeriod": "فترة زمنية",
@@ -22,12 +22,10 @@
   "savePlan": "احفظ الخطة",
   "dailyPlanUpdated": "تم تحديث الخطة اليومية بنجاح!",
 
-  "prayerLogged": "تم تسجيل الصلاة! 🙌",
-  "nothingToLog": "لا يوجد شيء لتسجيله",
-  "prayerCompleted": "تم إكمال صلاة {prayer}.",
-  "noPrayerRemaining": "لا توجد صلاة {prayer} متبقية.",
-  "logQadaaPrayer": "تسجيل صلاة قضاء",
-  "whichPrayer": "ما الصلاة التي أكملتها؟",
+  "prayerLogged": "أنت تقترب!",
+  "nothingToLog": "مبروك!",
+  "prayerCompleted": "قضيتَ صلاة {prayer}",
+  "noPrayerRemaining": "أنهيتَ ما عليك",
   "totalProgress": "إجمالي التقدم",
   "complete": "مكتملة",
   "totalMissed": "إجمالي الفوائت",
@@ -81,7 +79,6 @@
   "cancel": "إلغاء",
   "yesResetEverything": "نعم، أعد التعيين",
   "allDataReset": "تمت إعادة تعيين جميع البيانات.",
-  "appVersion": "متتبع صلوات القضاء الإصدار 1.0",
   "barrierDismiss": "إغلاق",
   "resetTitle": "هل أنت متأكد؟",
   "confirmReset": "نعم، إعادة تعيين الكل",
@@ -97,16 +94,12 @@
   "emailLabel": "البريد الإلكتروني",
   "passwordLabel": "كلمة المرور",
   "signIn": "تسجيل الدخول",
-  "or": "أو",
   "orContinueWith": "أو تابع باستخدام",
-  "signInWelcome": "مرحبًا بك في متتبع صلوات القضاء 👋",
   "signInTagline": "تتبع صلواتك الفائتة بسهولة.",
   "forgotPassword": "هل نسيت كلمة المرور؟",
   "noAccount": "ليس لديك حساب؟",
   "signUp": "إنشاء حساب",
-  "signUpWelcome": "أنشئ حسابك في متتبع صLcut القضاء ✨",
   "signUpTagline": "نظّم صلواتك الفائتة بخطة تناسبك.",
-  "signUpSubtitle": "أنشئ حسابك لبدء تتبع صلواتك.",
   "firstName": "الاسم الأول",
   "lastName": "اسم العائلة",
   "phoneNumber": "رقم الهاتف",
@@ -142,7 +135,6 @@
   "youCannotExceed": "لا يمكنك تجاوز عدد الصلوات الفائتة",
   "missedPrayersFor": "الصلوات الفائتة لـ",
   "youAlreadyLoggedAll": "لقد قمت بتسجيل جميع صلوات {prayer} الفائتة ✅",
-  "youAlreadyLoggedAllDescription": "تظهر عندما يُسجل المستخدم كل الصلوات الفائتة",
   "validationError": "خطأ في التحقق",
   "validationIntro": "لقد أكملت صلوات أكثر مما فاتك في:",
   "validationOutro": "يجب عليك إعادة ضبط البيانات للمتابعة.",
