--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,7 @@
 {
   "appTitle": "Itmam",
+  "appVersion": "v1.0",
 
-  "qadaaTracker": "Qadaa Tracker",
   "qadaaDescription": "Track and complete your missed prayers with clarity and peace.",
   "createMyPlan": "Create My Plan",
   "timePeriod": "Time Period",
@@ -26,8 +26,6 @@
   "nothingToLog": "Nothing to log",
   "prayerCompleted": "{prayer} prayer completed.",
   "noPrayerRemaining": "No {prayer} remaining.",
-  "logQadaaPrayer": "Log Qadaa Prayer",
-  "whichPrayer": "Which prayer did you complete?",
   "totalProgress": "Total Progress",
   "complete": "Complete",
   "totalMissed": "Total Missed",
@@ -81,7 +79,6 @@
   "cancel": "Cancel",
   "yesResetEverything": "Yes, Reset Everything",
   "allDataReset": "All data has been reset.",
-  "appVersion": "Qadaa Tracker v1.0",
 
   "barrierDismiss": "Dismiss",
   "resetTitle": "Are you sure?",
@@ -98,16 +95,12 @@
   "emailLabel": "Email",
   "passwordLabel": "Password",
   "signIn": "Sign In",
-  "or": "or",
   "orContinueWith": "Or continue with",
-  "signInWelcome": "Welcome to Qadaa Tracker 👋",
   "signInTagline": "Track your missed prayers effortlessly.",
   "forgotPassword": "Forgot Password?",
-  "noAccount": "Don’t have an account?",
+  "noAccount": "Don't have an account?",
   "signUp": "Sign Up",
-  "signUpWelcome": "Create your Qadaa Tracker account ✨",
-  "signUpTagline": "Stay on top of your missed prayers with a personalized plan.",
-  "signUpSubtitle": "Create your account to start tracking your prayers.",
+  "signUpTagline": "Follow your missed prayers with a personalized plan.",
   "firstName": "First Name",
   "lastName": "Last Name",
   "phoneNumber": "Phone Number",
@@ -143,7 +136,6 @@
   "youCannotExceed": "You cannot exceed the missed prayers count",
   "missedPrayersFor": "missed prayers for",
   "youAlreadyLoggedAll": "You already logged all {prayer} prayers ✅",
-  "youAlreadyLoggedAllDescription": "Shown when user reaches max logged prayers",
   "validationError": "Validation Error",
   "validationIntro": "You have completed more prayers than missed for:",
   "validationFajr": "Fajr: {completed} completed but only {missed} missed",
