Remove phone number from signup, add delete account feature, update sign-in UI
- Remove phone number field from sign up form and validation
- Remove phoneNumber parameter from AuthService signUp method
- Remove mobileNumber from Firestore user document creation
- Remove phone number localization strings
- Add delete account functionality in settings (Firebase Auth + Firestore)
- Change 'orContinueWith' to 'or' in sign-in divider
- Update Apple sign-in button design (black background, white text)
- Add localization for 'Sign in with Google' and 'Sign in with Apple'

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -74,6 +74,11 @@
   "arabic": "العربية",
   "dangerZone": "منطقة الخطر",
   "resetAllData": "إعادة تعيين جميع البيانات",
+  "deleteAccount": "حذف الحساب",
+  "deleteAccountTitle": "حذف الحساب",
+  "deleteAccountWarning": "هل أنت متأكد أنك تريد حذف حسابك؟ لا يمكن التراجع عن هذا الإجراء. سيتم حذف جميع بياناتك بما في ذلك التقدم والخطة وسجل الصلوات بشكل دائم.",
+  "accountDeleted": "تم حذف الحساب بنجاح",
+  "deleteAccountFailed": "فشل حذف الحساب. يرجى المحاولة مرة أخرى.",
   "areYouSure": "هل أنت متأكد؟",
   "resetWarning": "سيؤدي هذا إلى حذف جميع بياناتك بما في ذلك التقدم والخطة وسجل الصلوات.",
   "cancel": "إلغاء",
@@ -94,7 +99,7 @@
   "emailLabel": "البريد الإلكتروني",
   "passwordLabel": "كلمة المرور",
   "signIn": "تسجيل الدخول",
-  "orContinueWith": "أو تابع باستخدام",
+  "or": "أو",
   "signInTagline": "تتبع صلواتك الفائتة بسهولة.",
   "forgotPassword": "هل نسيت كلمة المرور؟",
   "noAccount": "ليس لديك حساب؟",
@@ -102,7 +107,6 @@
   "signUpTagline": "نظّم صلواتك الفائتة بخطة تناسبك.",
   "firstName": "الاسم الأول",
   "lastName": "اسم العائلة",
-  "phoneNumber": "رقم الهاتف",
   "confirmPassword": "تأكيد كلمة المرور",
   "fillAllFields": "يرجى ملء جميع الحقول",
   "passwordsDoNotMatch": "كلمتا المرور غير متطابقتين",
@@ -125,6 +129,8 @@
   "appleSignInFailed": "فشل تسجيل الدخول بآبل",
   "google": "جوجل",
   "apple": "آبل",
+  "signInWithGoogle": "تسجيل الدخول باستخدام جوجل",
+  "signInWithApple": "تسجيل الدخول باستخدام آبل",
   "continueAsGuest": "المتابعة كضيف",
   "editMissedPrayers": "تعديل الصلوات الفائتة",
   "updateMissedPrayers": "تحديث الصلوات الفائتة",
