--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -74,6 +74,11 @@
   "arabic": "Arabic",
   "dangerZone": "Danger Zone",
   "resetAllData": "Reset All Data",
+  "deleteAccount": "Delete Account",
+  "deleteAccountTitle": "Delete Account",
+  "deleteAccountWarning": "Are you sure you want to delete your account? This action cannot be undone. All your data including your progress, plan, and prayer logs will be permanently deleted.",
+  "accountDeleted": "Account deleted successfully",
+  "deleteAccountFailed": "Failed to delete account. Please try again.",
   "areYouSure": "Are you sure?",
   "resetWarning": "This will permanently delete all your data including your progress, plan, and prayer logs.",
   "cancel": "Cancel",
@@ -95,7 +100,7 @@
   "emailLabel": "Email",
   "passwordLabel": "Password",
   "signIn": "Sign In",
-  "orContinueWith": "Or continue with",
+  "or": "Or",
   "signInTagline": "Track your missed prayers effortlessly.",
   "forgotPassword": "Forgot Password?",
   "noAccount": "Don't have an account?",
@@ -103,7 +108,6 @@
   "signUpTagline": "Follow your missed prayers with a personalized plan.",
   "firstName": "First Name",
   "lastName": "Last Name",
-  "phoneNumber": "Phone Number",
   "confirmPassword": "Confirm Password",
   "fillAllFields": "Please fill all fields",
   "passwordsDoNotMatch": "Passwords do not match",
@@ -126,6 +130,8 @@
   "appleSignInFailed": "Apple Sign-In failed",
   "google": "Google",
   "apple": "Apple",
+  "signInWithGoogle": "Sign in with Google",
+  "signInWithApple": "Sign in with Apple",
   "continueAsGuest": "Continue as Guest",
   "editMissedPrayers": "Edit Missed Prayers",
   "updateMissedPrayers": "Update Missed Prayers",
